[project]
name = "phspectra-workspace"
version = "0.0.0"
description = "uv workspace root — not a real package"
requires-python = ">=3.11"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/phspectra", "packages/benchmarks", "packages/train-gui"]

[tool.uv.sources]
phspectra = { workspace = true }
benchmarks = { workspace = true }
train-gui = { workspace = true }


[dependency-groups]
dev = [
    "phspectra",
    "benchmarks",
    "train-gui",
    "pytest>=8.0",
    "mypy>=1.15",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "pylint>=3.0.0",
    "pydocstyle>=6.3.0",
    "isort>=5.13.0",
    "boto3-stubs[s3,sqs]>=1.34",
    "python-semantic-release>=10.5.3",
    "build>=1.4.0",
    "pre-commit>=4.0.0",
]
lambda = [
    "boto3>=1.34",
    "astropy>=6.0",
    "pyarrow>=15.0",
    "aws-lambda-powertools>=3.0",
]
smoke = [
    "matplotlib>=3.10.8",
    "pytest>=8.0",
    { include-group = "lambda" },
]
test-lambda = [
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "boto3>=1.34",
    "astropy>=6.0",
    "numpy>=1.26,<2.3",
    "pyarrow>=15.0",
    "aws-lambda-powertools>=3.0",
    "phspectra",
]

# =============================================================================
# Tool configuration
# =============================================================================

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.main]
init-hook = "import sys, os; sys.path.insert(0, os.path.join(os.getcwd(), 'packages', 'benchmarks', 'docker'))"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-statements",
    "too-few-public-methods",
    "duplicate-code",
]

[tool.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = [
    "packages/phspectra/src",
    "packages/benchmarks/src",
    "packages/benchmarks/docker",
    "packages/infrastructure/lambda",
    "packages/train-gui/src",
]

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "astropy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aws_lambda_powertools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "click.*"
ignore_missing_imports = true

[tool.pyright]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require network access and optional dependencies (deselect with '-m \"not slow\"')",
]
